add link to 2017

--- a/_layouts/universaljsday2.html
+++ b/_layouts/universaljsday2.html
@@ -31,6 +31,7 @@
                 <li><a href="#location">{{ site.data.i18n.location}}</a></li>
                 <li><a href="#sponsor">{{ site.data.i18n.sponsor}}</a></li>
                 <li><a href="http://2016.universaljsday.com/" target="_blank">2016</a></li>
+                <li><a href="http://2017.universaljsday.com/" target="_blank">2017</a></li>
             </ul>
         </nav>
         <header>
