--- a/_includes/section-location.html
+++ b/_includes/section-location.html
@@ -52,7 +52,7 @@
                 <strong>Dalla stazione di Ferrara</strong>: raggiungere la location dalla stazione dei treni è molto facile,
                 basta prendere l'autobus numero 1, 6, 9 o 21 in direzione "Arco della Prospettiva". La fermata di arrivo
                 è presso l'arco della prospettiva, a due passi dalla location; se perdi questa fermata, puoi scendere alla
-                successiva che si trova a 300 metri. <a href="https://www.tper.it/sites/tper.it/files/FE%20-%20mappa%20linee%20urbane%202014.pdf"
+                successiva che si trova a 300 metri. <a href="http://www.tper.it/sites/tper.it/files/URBANO_FERRARA.pdf"
                     target="_blank">Qui trovi una mappa</a> di tutte le linee disponibili.<br/> L'autobus ferma anche di fronte
                 all'Hotel Touring, sia in direzione CNA Ferrara che in direzione stazione.<br/> È anche possibile prendere
                 un taxi, si trovano vicino all'uscita della stazione, sulla destra.<br> Se ti piace camminare, la location
