--- a/_sass/_config.scss
+++ b/_sass/_config.scss
@@ -8,10 +8,10 @@ $nav-background-color:    #FFFFFF;
 $nav-color:             #333333;
 
 
-$header-background-color: $primary-color url(../images/noise.png);
-$header-presents-color:  rgba(0, 0, 0, 0.5);
+$header-background-color: #000000 url(../images/header_bg.jpg);
+$header-presents-color:  rgba(255, 255, 255, 0.90);
 $header-name-color:          #FFFFFF;
-$header-datelocation-color:  rgba(0, 0, 0, 0.4);
+$header-datelocation-color:  rgba(255,255,255, 0.80);
 
 $share-background:      #333333;
 
