--- a/css/index.scss
+++ b/css/index.scss
@@ -44,6 +44,8 @@ nav{
 
 header{
     background: $header-background-color;
+    background-size: contain;
+    background-position: center center;
     padding: 3rem 0.5rem;
     text-align: center;
 
@@ -54,8 +56,9 @@ header{
 
             & > img{
                 vertical-align: middle;
-                width: 8rem;
-                height: 8rem;
+                width: 7rem;
+                height: 7rem;
+                box-shadow: 0px 0px 8px #000000;
             }
         }
 
@@ -80,13 +83,14 @@ header{
         text-transform: uppercase;
         font-weight: bold;
         color: $header-name-color;
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+        text-shadow: 0px 0px 4px #000000;
     }
 
     & > h2{
         font-size: 2rem;
         line-height: 2rem;
         color: $header-datelocation-color;
+        text-shadow: 0px 0px 2px #000000;
     }
 }
 
