feat: add CFS pdf

--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -1,36 +1,42 @@
 <section id="sponsor">
   <div>
 
-{% if page.cfs %}
-      <h3>Sponsorizza</h3>
-      <p>
-        Grandi sponsor ci aiutano a realizzare grandi eventi! <br/>
-        Ringraziamo tutti gli sponsors che ci stanno aiutando nel rendere possibile {{ page.title }}!
-        </p>
-        <p>
-        <a href="mailto: info@grusp.org">Contattaci</a> per sapere come metterti in mostra al {{ page.title }}.
-      </p>
+    {% if page.cfs %}
+    <h3>Sponsorizza</h3>
+    <p>
+      Grandi sponsor ci aiutano a realizzare grandi eventi!
+      <br/> Ringraziamo tutti gli sponsors che ci stanno aiutando nel rendere possibile {{ page.title }}!
+    </p>
+    <p>
+      Ulteriori informazioni sui piani di sponsorship
+      <a href="/download/sponsor-presentation.pdf" target="_blank">sono disponibili qui</a>.
+      <a href="mailto: info@grusp.org">Contattaci</a> per sapere come metterti in mostra al {{ page.title }}.
+    </p>
 
     <div class="column_6">
       <h4 class="main">Main sponsor</h4>
       <p>Il main sponsor sarà uno solo per conferenza ed avrà la possibilità di avere un banchetto indipendente per pubblicizzarsi</p>
-        <span class="euro btn">€ 5.000</span>
+      <span class="euro btn">€ 5.000</span>
       <ul class="benefit">
         <li>Banner sul sito</li>
-        <li>Possibilità di tenere un talk <strong>tecnico</strong> (sono escluse le tematiche commerciali).<br>Il talk dovrà essere preapprovato dagli organizzatori.</li>
+        <li>Possibilità di tenere un talk
+          <strong>tecnico</strong> (sono escluse le tematiche commerciali).
+          <br>Il talk dovrà essere preapprovato dagli organizzatori.</li>
         <li>Pubblicità nelle comunicazioni pre-evento</li>
         <li>Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)</li>
         <li>Presenza logo sul programma stampato</li>
         <li>Posizionamento del vostro roll-up nella sala</li>
         <li>5 biglietti gratuiti</li>
-        <li><strong>Banchetto principale 2m x 1m in sala o nella hall</strong></li>
+        <li>
+          <strong>Banchetto principale 2m x 1m in sala o nella hall</strong>
+        </li>
       </ul>
     </div>
 
     <div class="column_6">
       <h4 class="platinum">Platinum sponsor</h4>
       <p>Un solo sponsor Platinum è ammesso per conferenza, ed avrà la possibilità di avere un banchetto indipendente per pubblicizzarsi</p>
-        <span class="euro btn">€ 3.000</span>
+      <span class="euro btn">€ 3.000</span>
       <ul class="benefit">
         <li>Banner sul sito</li>
         <li>Pubblicità nelle comunicazioni pre-evento</li>
@@ -38,7 +44,9 @@
         <li>Presenza logo sul programma stampato</li>
         <li>Posizionamento del vostro roll-up nella sala</li>
         <li>4 biglietti gratuiti</li>
-        <li><strong>Banchetto 1m x 1m in sala o nella hall</strong></li>
+        <li>
+          <strong>Banchetto 1m x 1m in sala o nella hall</strong>
+        </li>
       </ul>
     </div>
     <div class="clear"></div>
@@ -80,52 +88,52 @@
 
     <div class="clear"></div>
 
-{% endif %}
+    {% endif %}
 
-  <h3>Gli Sponsor</h3>
-
-
-  <div class="main_sponsor">
-    <h4 class="main">Platinum</h4>
+    <h3>Gli Sponsor</h3>
 
 
+    <div class="main_sponsor">
+      <h4 class="main">Platinum</h4>
 
+
+
+      <div class="clear"></div>
+    </div>
+
+    <div class="gold_sponsors">
+      <h4 class="gold">Gold</h4>
+
+
+      <div class="clear"></div>
+    </div>
+
+    <div class="silver_sponsors">
+      <h4 class="silver">Silver</h4>
+
+
+
+      <div class="clear"></div>
+    </div>
+
+    <div class="bronze_sponsors">
+      <h4 class="bronze">Bronze</h4>
+
+
+      <div class="clear"></div>
+    </div>
+
+
+    <div class="patr_sponsor">
+      <h4 class="patr">Con il patrocinio di</h4>
+
+      <div class="clear"></div>
+    </div>
+
+    <div class="patr_sponsor">
+      <h4 class="patr">In partnership con</h4>
+
+      <div class="clear"></div>
+    </div>
     <div class="clear"></div>
-  </div>
-
-  <div class="gold_sponsors">
-    <h4 class="gold">Gold</h4>
-
-
-    <div class="clear"></div>
-  </div>
-
-  <div class="silver_sponsors">
-    <h4 class="silver">Silver</h4>
-
-
-
-    <div class="clear"></div>
-  </div>
-
-  <div class="bronze_sponsors">
-    <h4 class="bronze">Bronze</h4>
-
-
-    <div class="clear"></div>
-  </div>
-
-
-  <div class="patr_sponsor">
-    <h4 class="patr">Con il patrocinio di</h4>
-
-    <div class="clear"></div>
-  </div>
-
-  <div class="patr_sponsor">
-    <h4 class="patr">In partnership con</h4>
-
-    <div class="clear"></div>
-  </div>
-  <div class="clear"></div>
 </section>
