fix: some wordings

--- a/_includes/section-contents.html
+++ b/_includes/section-contents.html
@@ -3,8 +3,7 @@
         <h3>La conferenza</h3>
 
         <p>
-            Ti sei mai chiesto come poter diffondere rapidamente la tua app su diversi dispositivi mobile come iOS, Android o desktop,
-            scrivendo il codice una volta sola?
+            Ti sei mai chiesto come poter diffondere rapidamente la tua app su diverse piattaforme mobile come iOS, Android o desktop?
         </p>
         <p>
             Aziende come Facebook, NetFlix o PayPal utilizzano JavaScript nel loro development stack a partire dal server web fino al
