--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -111,7 +111,9 @@
     <div class="silver_sponsors">
       <h4 class="silver">Silver</h4>
 
-
+      <a class="banner" href="https://balsamiq.com" title="Balsamiq">
+        <img src="./images/sponsors/balsamiq-logo-noborder-screen.svg" alt="Sponsor Balsamiq"/>
+      </a>
 
       <div class="clear"></div>
     </div>
