feat: add jetbrains

--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -92,50 +92,56 @@
 
     <h3>Gli Sponsor</h3>
 
-
+<!-- 
     <div class="main_sponsor">
       <h4 class="main">Platinum</h4>
 
 
 
       <div class="clear"></div>
-    </div>
+    </div> -->
 
-    <div class="gold_sponsors">
+    <!-- <div class="gold_sponsors">
       <h4 class="gold">Gold</h4>
 
 
       <div class="clear"></div>
-    </div>
+    </div> -->
 
     <div class="silver_sponsors">
       <h4 class="silver">Silver</h4>
 
-      <a class="banner" href="https://balsamiq.com" title="Balsamiq">
+      <a class="banner" href="https://balsamiq.com" target="_blank" title="Balsamiq">
         <img src="./images/sponsors/balsamiq-logo-noborder-screen.svg" alt="Sponsor Balsamiq"/>
       </a>
 
       <div class="clear"></div>
     </div>
 
-    <div class="bronze_sponsors">
+    <!-- <div class="bronze_sponsors">
       <h4 class="bronze">Bronze</h4>
 
 
       <div class="clear"></div>
-    </div>
+    </div> -->
 
 
-    <div class="patr_sponsor">
+    <!-- <div class="patr_sponsor">
       <h4 class="patr">Con il patrocinio di</h4>
 
       <div class="clear"></div>
-    </div>
+    </div> -->
 
     <div class="patr_sponsor">
       <h4 class="patr">In partnership con</h4>
 
+      
+      <a class="banner" href="http://www.jetbrains.com" target="_blank" title="JetBrains">
+        <img src="./images/sponsors/jetbrains.png" alt="Sponsor JetBrains"/>
+      </a>
+
       <div class="clear"></div>
     </div>
+
     <div class="clear"></div>
 </section>
