blinky new date

--- a/_layouts/universaljsday2.html
+++ b/_layouts/universaljsday2.html
@@ -52,7 +52,7 @@
             </p>
             <span>{% if site.data.config.partner %} {{ site.data.i18n.presents }} {% else %} {{ site.data.i18n.present }} {% endif %}</span>
             <h1 id="conf_name">{{ site.data.conference.name }}</h1>
-            <h2 id="conf_location">{{ site.data.location.city }}, {{ site.data.conference.day }} {{ site.data.conference.year }}</h2>
+            <h2 id="conf_location">{{ site.data.location.city }}, <del>13 Aprile</del> {{ site.data.conference.day }} {{ site.data.conference.year }}<span class="new-date">NEW DATE!</span></span></h2>
         </header>
         <div class="share">
             <div class="addthis_wrapper">
