remove "s" from section title

--- a/_includes/section-announcements.html
+++ b/_includes/section-announcements.html
@@ -1,6 +1,6 @@
 <section id="speakers">
     <div>
-        <h3>Gli Speakers</h3>
+        <h3>Gli Speaker</h3>
         <div>
 <table class="table">
                         <tbody>
