--- a/_includes/section-workshop.html
+++ b/_includes/section-workshop.html
@@ -1,97 +1,59 @@
-<a name="cfp"></a>
-<section class="alpha_24">
-    <div class="container group">
-        <div class="column_6 centered">
-            <a name="workshop"></a>
-            <h3 class="center">Il workshop</h3>
+<section id="workshop">
+    <div>
+        <h3 class="center">Il Workshop</h3>
+        <div class="column_4">
+            <img class="img-responsive" src="images/speakers/matteomanchi.jpg" alt="Matteo Manchi" />
+        </div>
+        <div class="column_8">
+            <h4>React Native: da web a mobile app</h4>
             <p>
-                Durante il workshop verranno presentate slide ed esercizi su argomenti avanzati: demo da istanze AWS
-                (swarm e overlay inclusi) con immagini basate su alpine (che non è una marca di birra) incluse le nuove
-                features di sicurezza e data volume.
+                React Native è un innovativo approccio allo sviluppo mobile che permette lo sviluppo di applicazioni native (e non ibride)
+                scritte in JavaScript. Gli sviluppatori web porteranno le loro skill in React sul nativo; gli sviluppatori
+                mobile troveranno un nuovo modo di velocizzare lo sviluppo di cose noiose, come i CRUD. Un'intera giornata
+                sul framework per capirne le potenzialità e proiettarle in ambito lavorativo.
             </p>
+            <h4>A chi è rivolto</h4>
+            <p>Il workshop si rivolge a chi ha sperimentato le potenzialità di React.js e vuole affacciarsi al mondo dello sviluppo
+                mobile, ma anche a sviluppatori mobile che vogliono integrare il loro sviluppo nativo con nuove tecnologie.</p>
+            <h4>Il docente</h4>
+            <p>Matteo Manchi (@matteomanchi) è un fullstack developer, fondatore della community RomaJS e CEO di un'agenzia di consulting e sviluppo software. 
+                Negli ultimi anni si è specializzato nello sviluppo frontend, prima con React.js, poi con React Native.</p>
+        </div>
+        <div class="column_12">
             <h4>Prerequisiti</h4>
-            <p>
-                È richiesta familiarità con gli ambienti UN*X sia per quanto concerne i concetti
-                di funzionamento (servizi, permessi, filesystem, ...) sia per l'utilizzo dell'ambiente a riga di
-                comando.
-                <br/>
-                È necessario avere il proprio portatile con una VM ubuntu 14.04 con docker installato (seguendo la
-                <a href="https://docs.docker.com/engine/installation/" target="_blank">procedura online</a> in modo da
-                avere l'ultima release disponibile). Docker consiglia ubuntu per il supporto nativo ad aufs.
-            </p>
-
+            <ul>
+                <li>Conoscenza media di JavaScript</li>
+                <li>Conoscenza base React.js</li>
+                <li>Conoscenza base di HTML/CSS o layout mobile</li>
+                <li>Computer portatile</li>
+                <li>Un dispositivo Android o iOS</li>
+                <li>Node.js installato</li>
+                <li>git installato</li>
+                <li>Atom, Visual Studio Code, Sublime Text o un altro editor installato</li>
+                <li>
+                    <a href="https://developer.android.com/studio/index.html" target="_blank">Android Studio</a> se si vuole fare la build su Android (non necessario)
+                </li>
+                <li>xCode per Mac, se si vuole fare la build per iOS (non necessario)</li>
+            </ul>
             <h4>Programma</h4>
             <p>
-                Il workshop si svolgerà <strong>dalle 10:00 alle 18:00</strong> presso il <strong>centro congressi dell'Hotel
-                San Marco</strong> in Via Baldassarre Longhena 42 (la stessa sede della conferenza).
+                Il workshop si svolgerà
+                <strong>dalle 10:00 alle 13:00</strong> e continuerà
+                <strong>dalle 14:00 alle 18:00</strong> presso la
+                <strong>sala direzione di CNA Ferrara</strong> in Via Caldirolo, 84 a Ferrara (la stessa sede della conferenza).
             </p>
             <ul>
-                <li>
-                    Intro to containers
-                    <ul>
-                        <li>Containers vs virtualization</li>
-                        <li>Containers for isolation</li>
-                        <li>Shipping containers</li>
-                    </ul>
-                </li>
-                <li>
-                    Docker, containers and images
-                    <ul>
-                        <li>Running and managing containers</li>
-                        <li>Building images</li>
-                        <li>Managing and distributing images</li>
-                    </ul>
-                </li>
-                <li>
-                    Dockerfile: FROM, RUN, ADD, ENV...
-                </li>
-                <li>
-                    Container and service?
-                </li>
-                <li>
-                    Volumes and data volumes
-                    <ul>
-                        <li>Bind and managed</li>
-                        <li>Link</li>
-                        <li>Demo (AWS)</li>
-                    </ul>
-                </li>
-                <li>
-                    Networking
-                    <ul>
-                        <li>Four network archetypes</li>
-                        <li>Overlay and consul</li>
-                        <li>Demo (AWS)</li>
-                    </ul>
-                </li>
-                <li>
-                    Manage resources
-                    <ul>
-                        <li>Memory limits, CPU, Access to devices</li>
-                        <li>Seccomp</li>
-                        <li>Demo (AWS)</li>
-                    </ul>
-                </li>
-                <li>
-                    Clustering and orchestrator: swarm
-                    <ul>
-                        <li>Demo (AWS)</li>
-                        <li>Policy and filter</li>
-                        <li>Swarm and overay</li>
-                    </ul>
-                </li>
-                <li>
-                    Host distribution: machine
-                    <ul>
-                        <li>Demo (AWS)</li>
-                    </ul>
-                </li>
-                <li>
-                    Manage complex architecture: compose
-                    <ul>
-                        <li>Demo (AWS)</li>
-                    </ul>
-                </li>
+                <li>React.js: concetti fondamentali</li>
+                <li>React Native: come funziona</li>
+                <li>Setup dell'ambiente e esecuzione della prima app</li>
+                <li>Componenti UI nativi</li>
+                <li>Componenti di terze parti</li>
+                <li>Gestione della navigazione</li>
+                <li>Gestione dei dati e persistenza</li>
+                <li>Animare i componenti</li>
+                <li>Guida alla pubblicazione</li>
+                <li>Pro Tip: Testing</li>
+                <li>Pro Tip: Sviluppare componenti nativi custom</li>
             </ul>
         </div>
 
