--- a/css/index.scss
+++ b/css/index.scss
@@ -283,8 +283,34 @@ footer{
     }
 }
 
+
+.column_8{
+    width: 40rem;
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    padding: 0rem 0.5rem;
+
+    @media screen and (max-width: 63rem){
+        width: 100%;
+    }
+}
+
 .column_6{
     width: 30rem;
+    display: block;
+    float: left;
+    box-sizing: border-box;
+    padding: 0rem 0.5rem;
+
+    @media screen and (max-width: 63rem){
+        width: 100%;
+    }
+}
+
+
+.column_12{
+    width: 100%;
     display: block;
     float: left;
     box-sizing: border-box;
@@ -344,4 +370,10 @@ footer{
             display: block;
         }
     }
+}
+
+#workshop div img {
+    margin-top: 1.5rem;
+    width: 100%;
+    height: auto;
 }
