--- a/_includes/section-workshop.html
+++ b/_includes/section-workshop.html
@@ -13,7 +13,7 @@
                 sul framework per capirne le potenzialità e proiettarle in ambito lavorativo.
             </p>
             <h4>A chi è rivolto</h4>
-            <p>Il workshop si rivolge a chi ha sperimentato le potenzialità di React.js e vuole affacciarsi al mondo dello sviluppo
+            <p>Il workshop del 19 aprile si rivolge a chi ha sperimentato le potenzialità di React.js e vuole affacciarsi al mondo dello sviluppo
                 mobile, ma anche a sviluppatori mobile che vogliono integrare il loro sviluppo nativo con nuove tecnologie.</p>
             <h4>Il docente</h4>
             <p>Matteo Manchi (@matteomanchi) è un fullstack developer, fondatore della community RomaJS e CEO di un'agenzia di consulting e sviluppo software. 
@@ -37,9 +37,7 @@
             </ul>
             <h4>Programma</h4>
             <p>
-                Il workshop si svolgerà
-                <strong>dalle 10:00 alle 13:00</strong> e continuerà
-                <strong>dalle 14:00 alle 18:00</strong> presso la
+                Il workshop si svolgerà <strong>giovedì 19 aprile dalle 10:00 alle 13:00 e continuerà dalle 14:00 alle 18:00</strong> presso la
                 <strong>sala direzione di CNA Ferrara</strong> in Via Caldirolo, 84 a Ferrara (la stessa sede della conferenza).
             </p>
             <ul>
