--- a/css/index.scss
+++ b/css/index.scss
@@ -330,6 +330,11 @@ footer{
     max-width: 100%;
     height: auto;
 }
+#sponsor div a.square img{
+    height: 7rem;
+    max-width: 100%;
+    width: auto;
+}
 
 #sponsor .main_sponsor a img{
     width: 20rem;
