--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -111,9 +111,14 @@
     <div class="silver_sponsors">
       <h4 class="silver">Silver</h4>
 
+      <a class="banner square" href="https://labs.madisoft.it/frontend-developer/" target="_blank" title="MadiSoft">
+        <img src="./images/sponsors/logo-madisoft-quadrato.svg" alt="Sponsor MadiSoft" />
+      </a>
+      
       <a class="banner" href="https://balsamiq.com" target="_blank" title="Balsamiq">
         <img src="./images/sponsors/balsamiq-logo-noborder-screen.svg" alt="Sponsor Balsamiq"/>
       </a>
+
 
       <div class="clear"></div>
     </div>
