added gold sponsors

--- a/_includes/section-sponsors.html
+++ b/_includes/section-sponsors.html
@@ -101,12 +101,19 @@
       <div class="clear"></div>
     </div> -->
 
-    <!-- <div class="gold_sponsors">
+    <div class="gold_sponsors">
       <h4 class="gold">Gold</h4>
-
-
+  
+      <a class="banner" href="http://www.cnafe.it" title="CNA Ferrara">
+        <img src="./images/sponsors/cna.png" alt="sponsor CNA Ferrara"/>
+      </a>
+  
+      <a class="banner" href="http://www.hoteltouringfe.it/" title="Hotel Touring Ferrara">
+        <img src="./images/sponsors/touring.png" alt="sponsor Hotel Touring Ferrara"/>
+      </a>
+  
       <div class="clear"></div>
-    </div> -->
+    </div>
 
     <div class="silver_sponsors">
       <h4 class="silver">Silver</h4>
