--- a/css/index.scss
+++ b/css/index.scss
@@ -1,384 +1,19 @@
 ---
 ---
-@import "reset";
-@import "config";
+@import "bootstrap/bootstrap";
 
-body{
-    font-family: $font-family;
-}
+body {
+    & > header {
+        @extend .d-flex;
+        @extend .flex-column;
+        @extend .flex-column;
 
-strong{
-    font-weight: bold;
-}
+        min-height: 100vh;
+        background: url(../images/header_bg.png) repeat center center;
+        background-size: cover;
 
-
-a{
-    color: $primary-color;
-    &:hover{
-        color: darken($primary-color, 10%);
-    }
-}
-
-nav{
-    background: $nav-background-color;
-
-    & > ul{
-        list-style: none;
-        text-align: center;
-
-        & > li{
-            display: inline-block;
-            margin: 1rem 1.5rem;
-
-            & > a{
-                color: $nav-color;
-                text-decoration: none;
-
-                &:hover{
-                    color: darken($nav-color, 15%);
-                }
-            }
-        }
-    }
-}
-
-header{
-    background: $header-background-color;
-    background-size: contain;
-    background-position: center center;
-    padding: 3rem 0.5rem;
-    text-align: center;
-
-    & > p{
-
-        & > a{
-            text-decoration: none;
-
-            & > img{
-                vertical-align: middle;
-                width: 7rem;
-                height: 7rem;
-                box-shadow: 0px 0px 8px #000000;
-                margin-bottom: 1.5rem;
-            }
-        }
-
-        & > span{
-            color: $header-presents-color;
-            font-size: 1.5rem;
-            line-height: 1.5rem;
-            margin: 1.5rem;
-        }
-    }
-
-    & > span{
-        display: block;
-        margin: 1.5rem;
-        margin-top: 0rem;
-        text-transform: uppercase;
-        color: $header-presents-color;
-    }
-
-    & > h1{
-        font-size: 4rem;
-        line-height: 4rem;
-        text-transform: uppercase;
-        font-weight: bold;
-        color: $header-name-color;
-        text-shadow: 0px 0px 4px #000000;
-    }
-
-    & > h2{
-        font-size: 2rem;
-        line-height: 2rem;
-        color: $header-datelocation-color;
-        text-shadow: 0px 0px 2px #000000;
-
-        & > span{
-            position: relative;
-        }
-
-        .new-date {
-            display: block;
-            background: #f7df1e;
-            color: #333333;
-            padding: 0.2rem;
-            animation: blinker 1.5s ease-in-out infinite;
-            text-shadow: 0px 0px 0px transparent;
-            position: absolute;
-            top: 0.3rem;
-            left: 100%;
-            font-size: 1rem;
-            line-height: 1rem;
-            font-weight: bold;
-            margin-left: 1rem;
-            //transform: rotate(-45deg);
-        }
-
-        @media screen and (max-width: 600px) {
-            .new-date{
-                left: auto;
-                right: 0px;
-                top: 100%;
-            }
-        }
-        
-        @keyframes blinker {  
-            50% { opacity: 0; }
-        }
-    }
-}
-
-.share{
-    max-width: 300px;
-    min-height: 30px;
-    background: $share-background;
-    padding: 10px;
-    padding-bottom: 5px;
-    margin: auto;
-    margin-top: -22px;
-    text-align: center;
-}
-
-section{
-    color: $section-color;
-
-    & > div{
-
-        margin: 0px auto;
-        max-width: 60rem;
-        padding: 1.5rem 1rem;
-
-        & h3{
-            text-align: center;
-            text-transform: uppercase;
-            color: $section-title-color;
-            font-size: 1.5rem;
-            line-height: 1.5rem;
-            margin-bottom: 1rem;
-
-            &::after{
-                content: '';
-                display: block;
-                border-bottom: 3px solid $section-underline-color;
-                width: 5rem;
-                margin: 0.5rem auto;
-            }
-        }
-
-        & h4{
-            margin-top: 1.5rem;
-            font-size: 1rem;
-            line-height: 1rem;
-            text-transform: uppercase;
-            font-weight: bold;
-            color: $section-title-color;
-        }
-
-        & ou, & ul{
-            list-style: inherit;
-            padding-left: 2rem;
-        }
-
-        & p{
-            margin-bottom: 1rem;
-            line-height: 1.5
-        }
-
-        & .euro{
-            background: #aaaaaa;
-            color: $nav-background-color;
-            display: inline-block;
-            padding: 0.5rem;
-            margin: 0.5rem;
-        }
-
-        & table{
-            margin: auto;
-
-            & td, & th{
-                padding: 10px;
-                text-align: center;
-                vertical-align: middle;
-            }
-
-            & .text-left{
-                text-align: left;
-            }
-
-            & img {
-                max-width: 100%;
-                height: auto;
-            }
-        }
-    }
-
-
-    &.alternate{
-        background: $section-alternate-background;
-        color: $section-alternate-color;
-
-        & > div{
-            & h3{
-                color: $section-alternate-title-color;
-                &::after{
-                    border-bottom-color: $section-alternate-underline-color;
-                }
-            }
+        & > div {
         }
 
     }
-}
-
-footer{
-    background: $section-alternate-background;
-    color: $section-alternate-color;
-
-
-    & > ul{
-        list-style: none;
-        text-align: center;
-
-        & > li{
-            display: inline-block;
-            margin: 1rem 1.5rem;
-
-            & > a{
-                color: $footer-link-color;
-                text-decoration: none;
-
-                &:hover{
-                    color: $footer-link-hover-color;
-                }
-            }
-        }
-    }
-}
-
-#map{
-    height: 15rem;
-}
-
-.column_3{
-    width: 15rem;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    padding: 0rem 0.5rem;
-
-    @media screen and (max-width: 63rem){
-        width: 100%;
-    }
-}
-
-.column_4{
-    width: 20rem;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    padding: 0rem 0.5rem;
-
-    @media screen and (max-width: 63rem){
-        width: 100%;
-    }
-}
-
-
-.column_8{
-    width: 40rem;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    padding: 0rem 0.5rem;
-
-    @media screen and (max-width: 63rem){
-        width: 100%;
-    }
-}
-
-.column_6{
-    width: 30rem;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    padding: 0rem 0.5rem;
-
-    @media screen and (max-width: 63rem){
-        width: 100%;
-    }
-}
-
-
-.column_12{
-    width: 100%;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    padding: 0rem 0.5rem;
-
-    @media screen and (max-width: 63rem){
-        width: 100%;
-    }
-}
-
-.clear, .row{
-    clear: both;
-}
-
-#sponsor div a img{
-    width: 15rem;
-    max-width: 100%;
-    height: auto;
-}
-#sponsor div a.square img{
-    height: 7rem;
-    max-width: 100%;
-    width: auto;
-}
-
-#sponsor .main_sponsor a img{
-    width: 20rem;
-    max-width: 100%;
-    height: auto;
-}
-
-#sponsor .patr_sponsor a img{
-    width: 10rem;
-    max-width: 100%;
-    height: auto;
-}
-
-// .patr_sponsor {
-//     float: left;
-// }
-
-.video{
-    position: relative;
-    padding-bottom: 0.5rem;
-
-    img {
-        width: 100%;
-        height: auto;
-    }
-
-    a {
-        color: #333333;
-        text-decoration: none;
-
-        &:hover, &:active {
-            text-decoration: none;
-            color: #333333;
-        }
-
-        span{
-            padding: 0.2rem 0rem;
-            display: block;
-        }
-    }
-}
-
-#workshop div img {
-    margin-top: 1.5rem;
-    width: 100%;
-    height: auto;
 }
