--- a/_includes/section-location.html
+++ b/_includes/section-location.html
@@ -2,65 +2,78 @@
     <div>
         <h3>La Location</h3>
 
+        <div>
+            <div>
+                <img src="images/marker_trasporti.png" alt="Stazione" />
+                <h4>Stazione Ferroviaria</h4>
+            </div>
 
-        <div class="column_4">
-            <img src="images/marker_trasporti.png" alt="Stazione" />
-            <h4>Stazione Ferroviaria</h4>
+            <div>
+                <img src="images/marker_hotel.png" alt="Hotel" />
+                <h4>Hotel</h4>
+                <p>
+                    <a href="http://www.hoteltouringfe.it/" target="_blank">Hotel Touring Ferrara</a>
+                    <br> Viale Cavour, 11
+                    <br> 44121 Ferrara
+                    <br> Tel: +39 0532.206200
+                    <br/> Fax: +39 0532.212000
+                    <br>
+                    <a href="http://www.hoteltouringfe.it/" target="_blank">http://www.hoteltouringfe.it/</a>
+                </p>
+                <p>
+                    L'
+                    <a href="http://www.hoteltouringfe.it/" target="_blank">hotel touring</a>, che sponsorizza la conferenza, offre
+                    <a href="./download/universaljsday_hotel_touring.pdf"
+                        target="_blank">prezzi convenzionati</a> per tutti coloro che parteciperanno all'Universal JS Day.
+                </p>
+            </div>
+
+
+            <div>
+                <img src="images/marker_i3p.png" alt="Location" />
+                <h4>Universal JS Day</h4>
+                <p>
+                    <a href="http://www.cnafe.it/" target="_blank">CNA Ferrara</a>
+                    <br> Via Caldirolo, 84
+                    <br> 44121 Ferrara
+                    <br> Tel: +39 0532.749111
+                    <br> Fax: +39 0532.749236
+                    <br>
+                    <a href="http://www.cnafe.it/" target="_blank">http://www.cnafe.it/</a>
+                </p>
+            </div>
         </div>
-
-        <div class="column_4">
-            <img src="images/marker_hotel.png" alt="Hotel" />
-            <h4>Hotel</h4>
-            <p>
-                <a href="http://www.hoteltouringfe.it/" target="_blank">Hotel Touring Ferrara</a><br> Viale Cavour, 11<br> 44121 Ferrara <br>                Tel: +39 0532.206200 <br/> Fax: +39 0532.212000 <br>
-                <a href="http://www.hoteltouringfe.it/" target="_blank">http://www.hoteltouringfe.it/</a>
-            </p>
-            <p>
-                L'<a href="http://www.hoteltouringfe.it/" target="_blank">hotel touring</a>, che sponsorizza la conferenza,
-                offre <a href="./download/universaljsday_hotel_touring.pdf" target="_blank">prezzi convenzionati</a> per tutti coloro che parteciperanno all'Universal JS Day.
-            </p>
-        </div>
-
-
-        <div class="column_4">
-            <img src="images/marker_i3p.png" alt="Location" />
-            <h4>Universal JS Day</h4>
-            <p>
-                <a href="http://www.cnafe.it/" target="_blank">CNA Ferrara</a><br> Via Caldirolo, 84<br> 44121 Ferrara <br>                Tel: +39 0532.749111<br> Fax: +39 0532.749236 <br>
-                <a href="http://www.cnafe.it/" target="_blank">http://www.cnafe.it/</a>
-            </p>
-        </div>
-
-        <div class="clear"></div>
-
     </div>
 </section>
+
 <div id="map"></div>
-<section class="alternate">
+<section id="directions" class="alternate">
     <div>
-        <div class="column_6">
-            <h5>In auto</h5>
-            <p><strong>Dall'uscita A13 - Ferrara Sud</strong>: Segui le indicazioni per Ferrara - Centro. Procedi dritto su
-                RA8, fino alla rotonda con SS16/Via Ravenna. Alla rotonda, uscita su Via Ravenna. Alla rotonda, 1a uscita
-                per Via Comacchio. Alla rotonda successiva 3a uscita per Via Caldirolo. Alla rotonda procedi dritto su Via
-                Caldirolo, seconda uscita. La location si trova sulla vostra destra.</p>
-        </div>
+        <div>
+            <div class="car">
+                <h5>In auto</h5>
+                <p>
+                    <strong>Dall'uscita A13 - Ferrara Sud</strong>: Segui le indicazioni per Ferrara - Centro. Procedi dritto su
+                    RA8, fino alla rotonda con SS16/Via Ravenna. Alla rotonda, uscita su Via Ravenna. Alla rotonda, 1a uscita
+                    per Via Comacchio. Alla rotonda successiva 3a uscita per Via Caldirolo. Alla rotonda procedi dritto su
+                    Via Caldirolo, seconda uscita. La location si trova sulla vostra destra.</p>
+            </div>
 
-        <div class="column_6">
-            <h5>In treno</h5>
-            <p>
-                <strong>Dalla stazione di Ferrara</strong>: raggiungere la location dalla stazione dei treni è molto facile,
-                basta prendere l'autobus numero 1, 6, 9 o 21 in direzione "Arco della Prospettiva". La fermata di arrivo
-                è presso l'arco della prospettiva, a due passi dalla location; se perdi questa fermata, puoi scendere alla
-                successiva che si trova a 300 metri. <a href="http://www.tper.it/sites/tper.it/files/URBANO_FERRARA.pdf"
-                    target="_blank">Qui trovi una mappa</a> di tutte le linee disponibili.<br/> L'autobus ferma anche di fronte
-                all'Hotel Touring, sia in direzione CNA Ferrara che in direzione stazione.<br/> È anche possibile prendere
-                un taxi, si trovano vicino all'uscita della stazione, sulla destra.<br> Se ti piace camminare, la location
-                può essere raggiunto a piedi dalla stazione in circa 20 minuti.
-            </p>
+            <div class="train">
+                <h5>In treno</h5>
+                <p>
+                    <strong>Dalla stazione di Ferrara</strong>: raggiungere la location dalla stazione dei treni è molto facile,
+                    basta prendere l'autobus numero 1, 6, 9 o 21 in direzione "Arco della Prospettiva". La fermata di arrivo
+                    è presso l'arco della prospettiva, a due passi dalla location; se perdi questa fermata, puoi scendere
+                    alla successiva che si trova a 300 metri.
+                    <a href="http://www.tper.it/sites/tper.it/files/URBANO_FERRARA.pdf"
+                        target="_blank">Qui trovi una mappa</a> di tutte le linee disponibili.
+                    <br/> L'autobus ferma anche di fronte all'Hotel Touring, sia in direzione CNA Ferrara che in direzione stazione.
+                    <br/> È anche possibile prendere un taxi, si trovano vicino all'uscita della stazione, sulla destra.
+                    <br> Se ti piace camminare, la location può essere raggiunto a piedi dalla stazione in circa 20 minuti.
+                </p>
+            </div>
         </div>
-
-        <div class="clear"></div>
     </div>
 </section>
 
