--- a/_includes/section-workshop.html
+++ b/_includes/section-workshop.html
@@ -1,61 +1,63 @@
 <section id="workshop">
     <div>
-        <h3 class="center">Il Workshop</h3>
-        <div class="column_4">
-            <img class="img-responsive" src="images/speakers/matteomanchi.jpg" alt="Matteo Manchi" />
+        <h3>Il Workshop</h3>
+        <div>
+            <div class="picture">
+                <img src="images/speakers/matteomanchi.jpg" alt="Matteo Manchi" />
+            </div>
+            <div class="intro">
+                <h4>React Native: da web a mobile app</h4>
+                <p>
+                    React Native è un innovativo approccio allo sviluppo mobile che permette lo sviluppo di applicazioni native (e non ibride)
+                    scritte in JavaScript. Gli sviluppatori web porteranno le loro skill in React sul nativo; gli sviluppatori
+                    mobile troveranno un nuovo modo di velocizzare lo sviluppo di cose noiose, come i CRUD. Un'intera giornata
+                    sul framework per capirne le potenzialità e proiettarle in ambito lavorativo.
+                </p>
+                <h4>A chi è rivolto</h4>
+                <p>Il workshop del 19 aprile si rivolge a chi ha sperimentato le potenzialità di React.js e vuole affacciarsi
+                    al mondo dello sviluppo mobile, ma anche a sviluppatori mobile che vogliono integrare il loro sviluppo
+                    nativo con nuove tecnologie.</p>
+                <h4>Il docente</h4>
+                <p>Matteo Manchi (@matteomanchi) è un fullstack developer, fondatore della community RomaJS e CEO di un'agenzia
+                    di consulting e sviluppo software. Negli ultimi anni si è specializzato nello sviluppo frontend, prima
+                    con React.js, poi con React Native.</p>
+            </div>
+            <div class="dependencies">
+                <h4>Prerequisiti</h4>
+                <ul>
+                    <li>Conoscenza media di JavaScript</li>
+                    <li>Conoscenza base React.js</li>
+                    <li>Conoscenza base di HTML/CSS o layout mobile</li>
+                    <li>Computer portatile</li>
+                    <li>Un dispositivo Android o iOS</li>
+                    <li>Node.js installato</li>
+                    <li>git installato</li>
+                    <li>Atom, Visual Studio Code, Sublime Text o un altro editor installato</li>
+                    <li>
+                        <a href="https://developer.android.com/studio/index.html" target="_blank">Android Studio</a> se si vuole fare la build su Android (non necessario)
+                    </li>
+                    <li>xCode per Mac, se si vuole fare la build per iOS (non necessario)</li>
+                </ul>
+                <h4>Programma</h4>
+                <p>
+                    Il workshop si svolgerà
+                    <strong>giovedì 19 aprile dalle 10:00 alle 13:00 e continuerà dalle 14:00 alle 18:00</strong> presso la
+                    <strong>sala direzione di CNA Ferrara</strong> in Via Caldirolo, 84 a Ferrara (la stessa sede della conferenza).
+                </p>
+                <ul>
+                    <li>React.js: concetti fondamentali</li>
+                    <li>React Native: come funziona</li>
+                    <li>Setup dell'ambiente e esecuzione della prima app</li>
+                    <li>Componenti UI nativi</li>
+                    <li>Componenti di terze parti</li>
+                    <li>Gestione della navigazione</li>
+                    <li>Gestione dei dati e persistenza</li>
+                    <li>Animare i componenti</li>
+                    <li>Guida alla pubblicazione</li>
+                    <li>Pro Tip: Testing</li>
+                    <li>Pro Tip: Sviluppare componenti nativi custom</li>
+                </ul>
+            </div>
         </div>
-        <div class="column_8">
-            <h4>React Native: da web a mobile app</h4>
-            <p>
-                React Native è un innovativo approccio allo sviluppo mobile che permette lo sviluppo di applicazioni native (e non ibride)
-                scritte in JavaScript. Gli sviluppatori web porteranno le loro skill in React sul nativo; gli sviluppatori
-                mobile troveranno un nuovo modo di velocizzare lo sviluppo di cose noiose, come i CRUD. Un'intera giornata
-                sul framework per capirne le potenzialità e proiettarle in ambito lavorativo.
-            </p>
-            <h4>A chi è rivolto</h4>
-            <p>Il workshop del 19 aprile si rivolge a chi ha sperimentato le potenzialità di React.js e vuole affacciarsi al mondo dello sviluppo
-                mobile, ma anche a sviluppatori mobile che vogliono integrare il loro sviluppo nativo con nuove tecnologie.</p>
-            <h4>Il docente</h4>
-            <p>Matteo Manchi (@matteomanchi) è un fullstack developer, fondatore della community RomaJS e CEO di un'agenzia di consulting e sviluppo software. 
-                Negli ultimi anni si è specializzato nello sviluppo frontend, prima con React.js, poi con React Native.</p>
-        </div>
-        <div class="column_12">
-            <h4>Prerequisiti</h4>
-            <ul>
-                <li>Conoscenza media di JavaScript</li>
-                <li>Conoscenza base React.js</li>
-                <li>Conoscenza base di HTML/CSS o layout mobile</li>
-                <li>Computer portatile</li>
-                <li>Un dispositivo Android o iOS</li>
-                <li>Node.js installato</li>
-                <li>git installato</li>
-                <li>Atom, Visual Studio Code, Sublime Text o un altro editor installato</li>
-                <li>
-                    <a href="https://developer.android.com/studio/index.html" target="_blank">Android Studio</a> se si vuole fare la build su Android (non necessario)
-                </li>
-                <li>xCode per Mac, se si vuole fare la build per iOS (non necessario)</li>
-            </ul>
-            <h4>Programma</h4>
-            <p>
-                Il workshop si svolgerà <strong>giovedì 19 aprile dalle 10:00 alle 13:00 e continuerà dalle 14:00 alle 18:00</strong> presso la
-                <strong>sala direzione di CNA Ferrara</strong> in Via Caldirolo, 84 a Ferrara (la stessa sede della conferenza).
-            </p>
-            <ul>
-                <li>React.js: concetti fondamentali</li>
-                <li>React Native: come funziona</li>
-                <li>Setup dell'ambiente e esecuzione della prima app</li>
-                <li>Componenti UI nativi</li>
-                <li>Componenti di terze parti</li>
-                <li>Gestione della navigazione</li>
-                <li>Gestione dei dati e persistenza</li>
-                <li>Animare i componenti</li>
-                <li>Guida alla pubblicazione</li>
-                <li>Pro Tip: Testing</li>
-                <li>Pro Tip: Sviluppare componenti nativi custom</li>
-            </ul>
-        </div>
-
-        <div class="clear"></div>
     </div>
-    <div class="separator"></div>
 </section>
