--- a/css/index.scss
+++ b/css/index.scss
@@ -1,19 +1,229 @@
 ---
 ---
+
+$orange: #F05F40;
+$primary: $orange;
+$secondary: #FFFFFF;
+$dark: #212121;
+$enable-rounded: false;
+
 @import "bootstrap/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://use.fontawesome.com/releases/v5.0.8/css/solid.css');
+@import url('https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css');
+
 
 body {
     & > header {
         @extend .d-flex;
         @extend .flex-column;
-        @extend .flex-column;
+        @extend .justify-content-center;
+        @extend .align-items-center;
 
-        min-height: 100vh;
-        background: url(../images/header_bg.png) repeat center center;
-        background-size: cover;
+        min-height: 80vh;
+        background: url('../images/header_bg.jpg') repeat center center;
+        background-size: contain;
+        padding: 1rem;
 
-        & > div {
+        & > p {
+            text-align: center;
+
+            & > a {
+
+                & > img {
+                    width: 6rem;
+                    height: 6rem;
+                    margin: 1rem;
+                    box-shadow: 0px 0px 1rem #000000;
+                }
+            }
         }
 
+        & > h1, & > .meta > span {
+            font-family: 'Roboto', sans-serif;
+            color: #FFFFFF;
+            text-shadow: 0px 0px 0.5rem #000000;
+            text-align: center;
+        }
+
+        & > .meta {
+            text-align: center;
+
+            & > span{
+                @extend .d-inline-block;
+                padding: 0rem 0.5rem;
+                text-transform: uppercase;
+                opacity: 0.8;
+            }
+        }
+
+        & > h1{
+            font-size: 4rem;
+            line-height: 4rem;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+
+        & > div {
+            margin-top: 1rem;
+
+            & > a {
+                @extend .btn;
+                //@extend .btn-md;
+                @extend .btn-secondary;
+                text-transform: uppercase;
+
+                &.side{
+                    @extend .btn-outline-secondary;
+                }
+            }
+        }
+
+    }
+
+    & > section {
+        & > div {
+            @extend .container;
+            @extend .p-3;
+
+            & > h3{
+                text-align: center;
+                text-transform: uppercase;
+
+                &::after {
+                    content: '';
+                    display: block;
+                    border-bottom: 3px solid #F05F40;
+                    width: 5rem;
+                    margin: 0.5rem auto
+                }
+            }
+
+            & img {
+                max-width: 100%;
+                height: auto;
+            }
+        }
+
+        &.alternate{
+            @extend .bg-dark;
+            @extend .text-white;
+        }
+
+    }
+
+    & > footer {
+        & > ul{
+            @extend .nav;
+            @extend .justify-content-center;
+            & > li {
+                @extend .nav-item;
+                & > a {
+                    @extend .nav-link;
+                }
+            }
+        }
+    }
+}
+
+
+#speakers{
+    & > div > div{
+        
+        & > div {
+            @extend .row;
+
+            & > .info {
+                @extend .col-sm-2;
+
+                text-align: right;
+                font-style: italic;
+            }
+            & > .detail {
+                @extend .col-sm-10;
+
+                & > div {
+                    @extend .media;
+
+                    & > img {
+                        @extend .mr-3;
+
+                        width: 6rem;
+                        height: 6rem;
+
+                    }
+                    & > div {
+                        @extend .media-body;
+                    }
+                }
+
+                @include media-breakpoint-up(sm) {
+                    border-left: 1px solid #DDDDDD;
+                    &:before {
+                        content: "";
+                        width: 12px;
+                        height: 12px;
+                        border-radius: 6px;
+                        background: #DDDDDD;
+                        position: absolute;
+                        left: -6px;
+                        top: 0
+                    }
+                }                
+            }
+        }
+    }
+}
+
+#workshop {
+    & > div {
+
+        & > div {
+            @extend .row;
+
+
+            & > .picture {
+                @extend .col-sm-4;
+    
+            }
+            & > .intro {
+                @extend .col-sm-8;
+            }
+            & > .dependencies{
+                @extend .col-12;
+            }
+        }
+    }
+}
+
+#location {
+    & > div {
+        & > div {
+            @extend .row;
+
+            & > div{
+                @extend .col-md-4;
+            }
+        }
+    }
+}
+
+#map {
+    width: 100%;
+    height: 15rem;
+}
+
+#directions {
+    & > div {
+        & > div {
+            @extend .row;
+
+            & > .car{
+                @extend .col-md-4;
+            }
+            & > .train{
+                @extend .col-md-8;
+            }
+        }
     }
 }
